@startuml
title SO DO LOP 3 TANG - TRA CUU PHIEU COC
top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}
package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHTraCuuPhieuCoc #BFE8BA {
    - txtMaPhieuCoc: TextBox
    - txtSDT: TextBox
    - txtEmail: TextBox
    - txtSoGiayTo: TextBox
    - grvKetQua: GridView
    - lblSoKetQua: Label
    - lblMaPhieuCoc: Label
    - lblTrangThai: Label
    - lblHoTenKhachHang: Label
    - lblSoDienThoai: Label
    - lblEmail: Label
    - lblSoGiayTo: Label
    - lblPhong: Label
    - lblHinhThucThue: Label
    - lblThoiDiemCoc: Label
    - lblTongTien: Label
    - lblTrangThaiThanhToan: Label
    - grvGiuongLienQuan: GridView
    - btnTimKiem: Button
    --
    + HienThi()
    + btnTimKiem_Click()
    + grvKetQua_CellClick(maPhieuCoc: String)
  }
}
package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class TraCuuPhieuCoc #F4E3A2 {
    + TimKiem(maPhieuCoc: String, sdt: String, email: String, soGiayTo: String, maNV: String): IReadOnlyList<PhieuCoc>
    + LayChiTiet(maPhieuCoc: String, maNV: String): PhieuCoc
  }

  class NhanVien #F4E3A2 {
    - MaNV: String
    - MaCN: String
    --
    + DocPhamVi(maNV: String): NhanVien
  }

  class PhieuCoc #F4E3A2 {
    - MaPhieuCoc: String
    - MaCN: String
    - MaKH: String
    - MaPhong: String
    - HanThanhToan: DateTime
    - HinhThucThue: String
    - SoGiuongThue: Integer
    - TongTien: Decimal
    - ThoiDiemCoc: DateTime
    - TrangThai: String
    - DaDongTien: Boolean
    - ThoiDiemHuy: DateTime
    - MaNVHuy: String
    - KhachHang: KhachHang
    - Phong: Phong
    - Giuongs: List<Giuong>
    --
    + TraCuu(maCN: String, maPhieuCoc: String, sdt: String, email: String, soGiayTo: String): IReadOnlyList<PhieuCoc>
    + DocChiTiet(maPhieuCoc: String, maCN: String): PhieuCoc
  }

  class KhachHang #F4E3A2 {
    - MaKH: String
    - HoTen: String
    - SDT: String
    - Email: String
    - LoaiGiayTo: String
    - SoGiayTo: String
  }

  class Phong #F4E3A2 {
    - MaPhong: String
    - SoPhong: String
    - ToaNha: String
  }

  class Giuong #F4E3A2 {
    - MaGiuong: String
    - SoGiuong: String
    - TrangThai: String
  }
}
package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class NhanVienDB #BFDCF0 {
    + DocChiTiet(maNV: String): NhanVien
  }
  class PhieuCocDB #BFDCF0 {
    + TraCuu(maCN: String, maPhieuCoc: String, sdt: String, email: String, soGiayTo: String): IReadOnlyList<PhieuCoc>
    + DocChiTiet(maPhieuCoc: String, maCN: String): PhieuCoc
  }
}

MHTraCuuPhieuCoc o-- TraCuuPhieuCoc
TraCuuPhieuCoc o-- PhieuCoc
TraCuuPhieuCoc o-- NhanVien
NhanVien o-- NhanVienDB
PhieuCoc o-- PhieuCocDB

PhieuCoc "0..*" -- "1" KhachHang : cua
PhieuCoc "0..*" -- "1" Phong : dat
PhieuCoc "1" -- "1..*" Giuong : gom

GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
TraCuuPhieuCoc -[hidden]down- PhieuCocDB
NhanVienDB -[hidden]right- PhieuCocDB
Giuong -[hidden]down- PhieuCocDB
@enduml
